--- a/src/main/resources/templates/userCreate.html
+++ b/src/main/resources/templates/userCreate.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create user</title>
 </head>
 <body>
-
+<div th:align="center">
+    <form action="#" th:action="@{/userCreate}" th:object="${user}" method="post">
+        <label for="name">Name</label>
+        <input type="text" th:field="*{name}" id="name">
+        <label for="name">Surname</label>
+        <input type="text" th:field="*{surname}" id="surname">
+        <br>
+        <label for="name">Age</label>
+        <input type="text" th:field="*{age}" id="age">
+        <label for="name">Email</label>
+        <input type="text" th:field="*{email}" id="email">
+        <br>
+        <input type="submit" value="Create User!"/>
+    </form>
+</div>
 </body>
 </html>
