--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:align="center">
-    <form action="#" th:action="@{/userUpdate}" th:object="${user}" method="post">
+    <form th:method="PUT" th:action="@{/userUpdate}" th:object="${user}">
         <label for="name">Name</label>
         <input type="text" th:field="*{name}" id="name">
         <label for="name">Surname</label>
